Feat: add box-shadow on map button

--- a/clone.html
+++ b/clone.html
@@ -116,7 +116,7 @@
                                         </div>
 
                                         <div
-                                            style="left: 0px; top: 64px; padding: 40px 32px; box-shadow: rgba(0, 0, 0, 0.15); width: 475px; max-height: calc(100vh - 150px); overflow-x: hidden; background-color: rgb(255, 255, 255);"
+                                            style="left: 0px; top: 64px; padding: 40px 32px; box-shadow: 0 3px 12px 0 rgba(0, 0, 0, 0.15); width: 475px; max-height: calc(100vh - 150px); overflow-x: hidden; background-color: rgb(255, 255, 255);"
                                             class="absolute margin-top-12 radius-32">
                                             <div style="overflow-y: hidden; text-align: left; row-gap: 24px;"
                                                 class="flex-container flex-column">
