Feat: normalize highlighting selected button except for others

--- a/clone.html
+++ b/clone.html
@@ -352,23 +352,23 @@
                                                             </svg>
                                                         </div>
                                                         <!-- 탭 패널 -->
-                                                        <div>
+                                                        <div id="panel-placesByAreasTabId">
                                                             <!-- 전 세계 -->
-                                                            <div></div>
+                                                            <div id="panel-placesByAreasTabId-0" hidden></div>
                                                             <!-- 동아시아 -->
-                                                            <div></div>
+                                                            <div id="panel-placesByAreasTabId-1" hidden></div>
                                                             <!-- 동남아시아 -->
-                                                            <div></div>
+                                                            <div id="panel-placesByAreasTabId-2" hidden></div>
                                                             <!-- 유럽 -->
-                                                            <div></div>
+                                                            <div id="panel-placesByAreasTabId-3" hidden></div>
                                                             <!-- 북남미 -->
-                                                            <div></div>
+                                                            <div id="panel-placesByAreasTabId-4" hidden></div>
                                                             <!-- 오세아니아 -->
-                                                            <div></div>
+                                                            <div id="panel-placesByAreasTabId-5" hidden></div>
                                                             <!-- 기타 아시아 지역 -->
-                                                            <div></div>
+                                                            <div id="panel-placesByAreasTabId-6" hidden></div>
                                                             <!-- 아프리카 -->
-                                                            <div></div>
+                                                            <div id="panel-placesByAreasTabId-7" hidden></div>
                                                         </div>
 
                                                     </div>
