Fix: change position, whose element contains z-index

--- a/clone.html
+++ b/clone.html
@@ -28,7 +28,7 @@
             <!-- airbnb 로고 -->
             <div style="flex-basis: 140px;" class="height-80 inline-flex-container flex-grow-1 flex-shrink-0">
                 <a href="https://www.airbnb.co.kr/"
-                    class="height-80  inline-flex-container text-vertical-middle align-items-center z-index-1">
+                    class="height-80  inline-flex-container text-vertical-middle align-items-center z-index-1 relative">
                     <div class="long-logo-display">
                         <svg width="102" height="32" style="display: block; color: rgb(255, 56, 92);">
                             <path
@@ -100,7 +100,7 @@
                                             <label style="padding: 14px 32px;"
                                                 class="highlight-grey-247 block flex-basis-zero flex-grow-1 flex-shrink-0 radius-32 transparent-border"
                                                 for="bigsearch-query-location-input">
-                                                <div>
+                                                <div class="">
                                                     <div style="line-height: 16px;"
                                                         class="font-black font-12px font-600 padding-bottom-2">여행지
                                                     </div>
