--- a/clone.html
+++ b/clone.html
@@ -104,23 +104,22 @@
                                         <div style="margin: -1px;"
                                             class="relative flex-container align-items-center flex-basis-zero flex-grow-1 flex-shrink-0">
                                             <label
-                                                class="layer-container hide-dividing-line-start block flex-basis-zero flex-grow-1 flex-shrink-0 radius-32 transparent-border cursor-pointer padding-14-32"
+                                                class="hide-dividing-line-start block flex-basis-zero flex-grow-1 flex-shrink-0 radius-32 transparent-border cursor-pointer padding-14-32"
                                                 for="bigsearch-query-location-input">
                                                 <div class="z-index-1 relative">
-                                                    <div style="line-height: 16px;"
-                                                        class="font-black font-12px font-600 padding-bottom-2">여행지
-                                                    </div>
-                                                    <input style="line-height: 18px;"
-                                                        class="cursor-text block width-full transparent-button font-grey-113 font-14px font-400 padding-0"
+                                                    <div class="line-height-16px font-12px font-600 padding-bottom-2">
+                                                        여행지</div>
+                                                    <input
+                                                        class="line-height-18px cursor-text block width-full transparent-button font-grey-113 font-14px font-400 padding-0"
                                                         id="bigsearch-query-location-input" name="query" type="search"
-                                                        aria-autocomplete="none" autocomplete="none" autocorrect="none"
+                                                        aria-autocomplete="none" autocomplete="off" autocorrect="off"
                                                         spellcheck="false" placeholder="여행지 검색" value>
                                                 </div>
                                             </label>
                                         </div>
                                         <!-- 여행지 검색 레이어 -->
                                         <div style="left: 0px; top: 64px; padding: 40px 32px; box-shadow: 0 3px 12px 0 rgba(0, 0, 0, 0.15); width: 475px; max-height: calc(100vh - 200px); overflow-x: hidden; overscroll-behavior: contain;"
-                                            class="layer-item absolute margin-top-12 radius-32 visibility-hidden background-color-basic">
+                                            class="absolute margin-top-12 radius-32 visibility-hidden background-color-basic">
                                             <div style="overflow: hidden; text-align: left; row-gap: 24px;"
                                                 class="flex-container flex-column">
                                                 <!-- 지역으로 검색하기 -->
@@ -1523,17 +1522,75 @@
                                     <div class="grey-dividing-line"></div>
                                     <!-- 체크인·아웃 / 날짜 추가 -->
                                     <div
-                                        class="layer-container flex-container justify-content-between align-items-center flex-basis-zero flex-grow-1 flex-shrink-0">
+                                        class="flex-container justify-content-between align-items-center flex-basis-zero flex-grow-1 flex-shrink-0">
                                         <div class="flex-basis-zero flex-grow-1 flex-shrink-0 relative margin--1">
-                                            <div class="hide-dividing-line-middle padding-1 radius-32 transparent-border relative z-index-1"
+                                            <div class="z-index-1 hide-dividing-line-middle padding-1 radius-32 transparent-border relative"
                                                 role="button" tabindex="0" aria-expanded="false">
-                                                <div class="padding-14-24 text-left relative z-index-1">
+                                                <div class="z-index-1 padding-14-24 text-left relative">
                                                     <div
                                                         class="text font-black font-12px font-600 padding-bottom-2 line-height-16px">
                                                         체크인
                                                     </div>
                                                     <div class="text font-grey-113 font-14px font-400 line-height-18px">
                                                         날짜 추가
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- 달력 레이어 -->
+                                        <div style="top: 64px; left: 0px; right: 0px; max-height: calc(100vh - 200px);"
+                                            class="absolute z-index-1 padding-16-32 margin-top-12 background-color-basic radius-32">
+                                            <div style="padding: 18px 28px 10px;"
+                                                class="flex-container justify-content-center align-items-center">
+                                                <div class="flex-container justify-content-center align-items-center">
+                                                    <div id="tabs">
+                                                        <!-- 탭 -->
+                                                        <div style="padding-bottom: 6px;">
+                                                            <div
+                                                                class="flex-container justify-content-center align-items-center">
+                                                                <div
+                                                                    class="background-color-235 radius-100 padding-0-4">
+                                                                    <div class="date-tab-grid-container" role="tablist">
+                                                                        <button id="tab--tabs--0"
+                                                                            aria-controls="panel--tabs--0"
+                                                                            aria-selected="true"
+                                                                            style="padding: 8px 12px; margin: 4px 2px 4px 0px;"
+                                                                            class="text font-600 font-black font-14px line-height-18px radius-100 background-color-basic grey-border-221"
+                                                                            role="tab">
+                                                                            날짜 지정
+                                                                        </button>
+                                                                        <button id="tab--tabs--1"
+                                                                            aria-controls="panel--tabs--1"
+                                                                            aria-selected="true"
+                                                                            style="padding: 8px 12px; margin: 4px 2px;"
+                                                                            class="text font-600 font-black font-14px line-height-18px radius-100 highlight-grey-221 background-color-transparent transparent-border"
+                                                                            role="tab">
+                                                                            월 단위
+                                                                        </button>
+                                                                        <button id="tab--tabs--2"
+                                                                            aria-controls="panel--tabs--2"
+                                                                            aria-selected="true"
+                                                                            style="padding: 8px 12px; margin: 4px 0px 4px 2px;"
+                                                                            class="text font-600 font-black font-14px line-height-18px radius-100 highlight-grey-221 background-color-transparent transparent-border"
+                                                                            role="tab">
+                                                                            유연한 일정
+                                                                        </button>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <!-- 탭 패널 -->
+                                                        <div>
+                                                            <div role="tabpanel" id="panel--tabs--0" aria-labelledby="tab--tabs--0">
+
+                                                            </div>
+                                                            <div role="tabpanel" id="panel--tabs--1" aria-labelledby="tab--tabs--1">
+
+                                                            </div>
+                                                            <div role="tabpanel" id="panel--tabs--2" aria-labelledby="tab--tabs--2">
+
+                                                            </div>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -1554,13 +1611,11 @@
                                                 </div>
                                             </div>
                                         </div>
-
                                     </div>
                                     <div class="grey-dividing-line"></div>
-                                    <div class="layer-item"></div>
                                     <!-- 여행자 / 게스트 추가 -->
                                     <div
-                                        class="flex-container justify-content-between align-items-center flex-basis-zero flex-grow-1 flex-shrink-0 relative margin--1">
+                                        class="flex-container align-items-center flex-basis-zero flex-grow-1 flex-shrink-0 relative margin--1">
                                         <div class="hide-dividing-line-end padding-1 flex-basis-zero flex-grow-1 flex-shrink-0"
                                             role="button" tabindex="0" aria-expanded="false">
                                             <div class="layer-container padding-14-24 relative z-index-1">
@@ -1596,7 +1651,6 @@
                                                 </div>
                                             </button>
                                         </div>
-                                        <div class="layer-item"></div>
                                     </div>
                                 </div>
                             </div>
