--- a/clone.html
+++ b/clone.html
@@ -1539,7 +1539,7 @@
                                         </div>
                                         <!-- 달력 레이어 -->
                                         <div style="top: 64px; left: 0px; right: 0px; max-height: calc(100vh - 200px);"
-                                            class="absolute z-index-1 padding-16-32 margin-top-12 background-color-basic radius-32">
+                                            class="visibility-hidden absolute z-index-1 padding-16-32 margin-top-12 background-color-basic radius-32">
                                             <div style="padding: 18px 28px 10px;"
                                                 class="flex-container justify-content-center align-items-center">
                                                 <div class="flex-container justify-content-center align-items-center">
@@ -1650,6 +1650,13 @@
                                                     </div>
                                                 </div>
                                             </button>
+                                        </div>
+                                    </div>
+                                    <!-- 게스트 추가 레이어 -->
+                                    <div style="box-shadow: 0 3px 12px 0 rgb(0 0 0/0.15); overscroll-behavior: contain; right: 0px; top: 64px; max-height: calc(100vh - 200px);" 
+                                        class="background-color-basic radius-32 padding-16-32 absolute">
+                                        <div>
+
                                         </div>
                                     </div>
                                 </div>
