--- a/clone.html
+++ b/clone.html
@@ -1524,7 +1524,7 @@
                                     <div
                                         class="flex-container justify-content-between align-items-center flex-basis-zero flex-grow-1 flex-shrink-0">
                                         <div class="flex-basis-zero flex-grow-1 flex-shrink-0 relative margin--1">
-                                            <div class="z-index-1 hide-dividing-line-middle padding-1 radius-32 transparent-border relative"
+                                            <div id="structured-search-input-field-split-dates-0" class="z-index-1 hide-dividing-line-middle padding-1 radius-32 transparent-border relative"
                                                 role="button" tabindex="0" aria-expanded="false">
                                                 <div class="z-index-1 padding-14-24 text-left relative">
                                                     <div
@@ -1598,7 +1598,7 @@
 
                                         <div class="grey-dividing-line"></div>
                                         <div class="flex-basis-zero flex-grow-1 flex-shrink-0 relative margin--1">
-                                            <div class="layer-container hide-dividing-line-middle padding-1 radius-32 transparent-border relative z-index-1"
+                                            <div id="structured-search-input-field-split-dates-1" class="hide-dividing-line-middle padding-1 radius-32 transparent-border relative z-index-1"
                                                 role="button" tabindex="0" aria-expanded="false">
                                                 <div class="padding-14-24 text-left relative z-index-1">
                                                     <div
@@ -1616,9 +1616,9 @@
                                     <!-- 여행자 / 게스트 추가 -->
                                     <div
                                         class="flex-container align-items-center flex-basis-zero flex-grow-1 flex-shrink-0 relative margin--1">
-                                        <div class="hide-dividing-line-end padding-1 flex-basis-zero flex-grow-1 flex-shrink-0"
+                                        <div id="structured-search-input-field-guests-button" class="hide-dividing-line-end padding-1 flex-basis-zero flex-grow-1 flex-shrink-0"
                                             role="button" tabindex="0" aria-expanded="false">
-                                            <div class="layer-container padding-14-24 relative z-index-1">
+                                            <div class="padding-14-24 relative z-index-1">
                                                 <div
                                                     class="font-black font-12px font-600 padding-bottom-2 line-height-16px">
                                                     여행자
@@ -1654,9 +1654,16 @@
                                     </div>
                                     <!-- 게스트 추가 레이어 -->
                                     <div style="box-shadow: 0 3px 12px 0 rgb(0 0 0/0.15); overscroll-behavior: contain; right: 0px; top: 64px; max-height: calc(100vh - 200px);" 
-                                        class="background-color-basic radius-32 padding-16-32 absolute">
-                                        <div>
-
+                                        class="background-color-basic radius-32 margin-top-12 padding-16-32 absolute visibility-hidden">
+                                        <div style="padding: 0px 6px; width: 342px;">
+                                            <div style="padding: 24px 4px 24px 0px;" class="flex-container">
+                                                <section>
+                                                    <div>
+                                                        <h1 style="margin: 0px;" class="text font-16px font-600 ">성인</h1>
+                                                    </div>
+                                                    <div style="padding-top: 4px;" class="text font-14px font-400 line-height-18px font-grey-106">13세 이상</div>
+                                                </section>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
