--- a/clone.html
+++ b/clone.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="css/animation.css">
     <link rel="stylesheet" href="css/basic_element.css">
     <link rel="stylesheet" href="css/button.css">
-    <link rel="stylesheet" href="css/etc.css">
     <link rel="stylesheet" href="css/flex.css">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/navigation.css">
@@ -20,7 +19,10 @@
     <link rel="stylesheet" href="css/transition.css">
     <link rel="stylesheet" href="css/img.css">
     <link rel="stylesheet" href="css/interaction.css">
-    <link rel="stylesheet" href="css/pseudo.css">
+    <link rel="stylesheet" href="css/pa.css">
+    <link rel="stylesheet" href="css/pa_interaction.css">
+    <link rel="stylesheet" href="css/pb.css">
+    <link rel="stylesheet" href="css/pb_interaction.css">
 </head>
 
 <body>
@@ -104,7 +106,7 @@
                                         <div style="margin: -1px;"
                                             class="relative flex-container align-items-center flex-basis-zero flex-grow-1 flex-shrink-0">
                                             <label
-                                                class="hide-dividing-line-start block flex-basis-zero flex-grow-1 flex-shrink-0 radius-32 transparent-border cursor-pointer padding-14-32"
+                                                class="pb_hover-height-32 pb_hover-grey-border-right-255 pb_hover-align-self-center pb_hover-absolute pb_hover-top-33 pb_hover-right-0 pb_hover-margin-top--16 pa_background-padding-box pa_radius-32 pa_transparent-border pa_cursor-pointer pa_block pa_pointer-auto pa_absolute pa_top-0 pa_bottom-0 pa_left-0 pa_right-0 pa_z-index-0 pa_margin-right-2 pa_hover-grey-235 block flex-basis-zero flex-grow-1 flex-shrink-0 radius-32 transparent-border cursor-pointer padding-14-32"
                                                 for="bigsearch-query-location-input">
                                                 <div class="z-index-1 relative">
                                                     <div class="line-height-16px font-12px font-600 padding-bottom-2">
@@ -282,7 +284,7 @@
                                                             <button id="tab-placesByAreasTabId-0"
                                                                 aria-controls="panel-placesByAreasTabId-0"
                                                                 aria-selected="true" role="tab"
-                                                                class="transparent-button relative selected-button-highlight radius-8 area-button-highlight highlight-grey-247 font-black">
+                                                                class="transparent-button relative pa_absolute pa_height-2 pa_width-calc-100-20 pa_bottom--6 pa_left-10 pa_background-color-34 radius-8 area-button-highlight highlight-grey-247 font-black">
                                                                 <div style="pointer-events: none;"
                                                                     class="text text-center font-600 font-14px">
                                                                     전
@@ -1524,7 +1526,8 @@
                                     <div
                                         class="flex-container justify-content-between align-items-center flex-basis-zero flex-grow-1 flex-shrink-0">
                                         <div class="flex-basis-zero flex-grow-1 flex-shrink-0 relative margin--1">
-                                            <div id="structured-search-input-field-split-dates-0" class="z-index-1 hide-dividing-line-middle padding-1 radius-32 transparent-border relative"
+                                            <div id="structured-search-input-field-split-dates-0"
+                                                class="z-index-1  pb_hover-height-32 pb_hover-grey-border-right-255 pb_grey-border-left-255 pb_hover-align-self-center pb_hover-absolute pb_hover-top-33 pb_hover-right--1 pb_hover-left--1 pb_hover-margin-top--16 pa_hover-grey-235 pa_background-padding-box pa_radius-32 pa_transparent-border pa_cursor-pointer pa_block pa_pointer-auto pa_absolute pa_top-0 pa_bottom-0 pa_left-0 pa_right-0 pa_z-index-0 pa_hover-grey-235 padding-1 radius-32 transparent-border relative"
                                                 role="button" tabindex="0" aria-expanded="false">
                                                 <div class="z-index-1 padding-14-24 text-left relative">
                                                     <div
@@ -1581,13 +1584,16 @@
                                                         </div>
                                                         <!-- 탭 패널 -->
                                                         <div>
-                                                            <div role="tabpanel" id="panel--tabs--0" aria-labelledby="tab--tabs--0">
+                                                            <div role="tabpanel" id="panel--tabs--0"
+                                                                aria-labelledby="tab--tabs--0">
 
                                                             </div>
-                                                            <div role="tabpanel" id="panel--tabs--1" aria-labelledby="tab--tabs--1">
+                                                            <div role="tabpanel" id="panel--tabs--1"
+                                                                aria-labelledby="tab--tabs--1">
 
                                                             </div>
-                                                            <div role="tabpanel" id="panel--tabs--2" aria-labelledby="tab--tabs--2">
+                                                            <div role="tabpanel" id="panel--tabs--2"
+                                                                aria-labelledby="tab--tabs--2">
 
                                                             </div>
                                                         </div>
@@ -1598,7 +1604,8 @@
 
                                         <div class="grey-dividing-line"></div>
                                         <div class="flex-basis-zero flex-grow-1 flex-shrink-0 relative margin--1">
-                                            <div id="structured-search-input-field-split-dates-1" class="hide-dividing-line-middle padding-1 radius-32 transparent-border relative z-index-1"
+                                            <div id="structured-search-input-field-split-dates-1"
+                                                class=" pb_hover-height-32 pb_hover-grey-border-right-255 pb_grey-border-left-255 pb_hover-align-self-center pb_hover-absolute pb_hover-top-33 pb_hover-right--1 pb_hover-left--1 pb_hover-margin-top--16 pa_hover-grey-235 pa_background-padding-box pa_radius-32 pa_transparent-border pa_cursor-pointer pa_block pa_pointer-auto pa_absolute pa_top-0 pa_bottom-0 pa_left-0 pa_right-0 pa_z-index-0 pa_hover-grey-235 padding-1 radius-32 transparent-border relative z-index-1"
                                                 role="button" tabindex="0" aria-expanded="false">
                                                 <div class="padding-14-24 text-left relative z-index-1">
                                                     <div
@@ -1616,7 +1623,8 @@
                                     <!-- 여행자 / 게스트 추가 -->
                                     <div
                                         class="flex-container align-items-center flex-basis-zero flex-grow-1 flex-shrink-0 relative margin--1">
-                                        <div id="structured-search-input-field-guests-button" class="hide-dividing-line-end padding-1 flex-basis-zero flex-grow-1 flex-shrink-0"
+                                        <div id="structured-search-input-field-guests-button"
+                                            class=" pb_hover-height-32 pb_grey-border-left-255 pb_hover-align-self-center pb_hover-absolute pb_hover-top-33 pb_hover-left-0 pb_hover-margin-top--16 pa_hover-grey-235 pa_background-padding-box pa_radius-32 pa_transparent-border pa_cursor-pointer pa_block pa_pointer-auto pa_absolute pa_top-0 pa_bottom-0 pa_left-0 pa_right-0 pa_z-index-0 pa_margin-left-2 pa_user-select-auto pa_hover-grey-235 padding-1 flex-basis-zero flex-grow-1 flex-shrink-0"
                                             role="button" tabindex="0" aria-expanded="false">
                                             <div class="padding-14-24 relative z-index-1">
                                                 <div
@@ -1653,15 +1661,18 @@
                                         </div>
                                     </div>
                                     <!-- 게스트 추가 레이어 -->
-                                    <div style="box-shadow: 0 3px 12px 0 rgb(0 0 0/0.15); overscroll-behavior: contain; right: 0px; top: 64px; max-height: calc(100vh - 200px);" 
+                                    <div style="box-shadow: 0 3px 12px 0 rgb(0 0 0/0.15); overscroll-behavior: contain; right: 0px; top: 64px; max-height: calc(100vh - 200px);"
                                         class="background-color-basic radius-32 margin-top-12 padding-16-32 absolute visibility-hidden">
                                         <div style="padding: 0px 6px; width: 342px;">
                                             <div style="padding: 24px 4px 24px 0px;" class="flex-container">
                                                 <section>
                                                     <div>
-                                                        <h1 style="margin: 0px;" class="text font-16px font-600 ">성인</h1>
+                                                        <h1 style="margin: 0px;" class="text font-16px font-600 ">성인
+                                                        </h1>
                                                     </div>
-                                                    <div style="padding-top: 4px;" class="text font-14px font-400 line-height-18px font-grey-106">13세 이상</div>
+                                                    <div style="padding-top: 4px;"
+                                                        class="text font-14px font-400 line-height-18px font-grey-106">
+                                                        13세 이상</div>
                                                 </section>
                                             </div>
                                         </div>
@@ -2287,7 +2298,7 @@
         </div>
         <div id="tabs-seo" style="margin-top: 8px;" class="flex-container justify-content-start travel-tab-list"
             role="tablist">
-            <button id="tab-seo-0" class="font-black relative selected-button-highlight" role="tab"
+            <button id="tab-seo-0" class="font-black relative pa_absolute pa_height-2 pa_width-calc-100-20 pa_bottom--6 pa_left-10 pa_background-color-34" role="tab"
                 aria-controls="panel-seo-0" aria-selected="false">
                 인기
             </button>
