--- a/clone.html
+++ b/clone.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/pa_interaction.css">
     <link rel="stylesheet" href="css/pb.css">
     <link rel="stylesheet" href="css/pb_interaction.css">
+    <link rel="stylesheet" href="css/placeholder.css">
 </head>
 
 <body>
@@ -112,7 +113,7 @@
                                                     <div class="line-height-16px font-12px font-600 padding-bottom-2">
                                                         여행지</div>
                                                     <input
-                                                        class="line-height-18px cursor-text block width-full transparent-button font-grey-113 font-14px font-400 padding-0"
+                                                        class="line-height-18px cursor-text block width-full transparent-button ph_font-grey-113 font-black font-14px font-600 ph_font-400 padding-0"
                                                         id="bigsearch-query-location-input" name="query" type="search"
                                                         aria-autocomplete="none" autocomplete="off" autocorrect="off"
                                                         spellcheck="false" placeholder="여행지 검색" value>
@@ -1528,7 +1529,7 @@
                                         class="flex-container justify-content-between align-items-center flex-basis-zero flex-grow-1 flex-shrink-0">
                                         <div class="flex-basis-zero flex-grow-1 flex-shrink-0 relative margin--1">
                                             <div id="structured-search-input-field-split-dates-0"
-                                                class="z-index-1 pb_hover-height-32 pb_hover-grey-border-right-255 pb_grey-border-left-255 pb_hover-align-self-center pb_hover-absolute pb_hover-top-33 pb_hover-right--1 pb_hover-left--1 pb_hover-margin-top--16 pa_hover-grey-235 pa_background-padding-box pa_radius-32 pa_transparent-border pa_cursor-pointer pa_block pa_pointer-auto pa_absolute pa_top-0 pa_bottom-0 pa_left-0 pa_right-0 pa_z-index-0 pa_hover-grey-235 padding-1 radius-32 transparent-border relative"
+                                                class="z-index-1 pb_hover-height-32 pb_hover-grey-border-right-255 pb_hover-grey-border-left-255 pb_hover-align-self-center pb_hover-absolute pb_hover-top-33 pb_hover-right--1 pb_hover-left--1 pb_hover-margin-top--16 pa_hover-grey-235 pa_background-padding-box pa_radius-32 pa_transparent-border pa_cursor-pointer pa_block pa_pointer-auto pa_absolute pa_top-0 pa_bottom-0 pa_left-0 pa_right-0 pa_z-index-0 pa_hover-grey-235 padding-1 radius-32 transparent-border relative"
                                                 role="button" tabindex="0" aria-expanded="false">
                                                 <div class="z-index-1 padding-14-24 text-left relative">
                                                     <div
@@ -1608,7 +1609,7 @@
                                         
                                         <div class="flex-basis-zero flex-grow-1 flex-shrink-0 relative margin--1">
                                             <div id="structured-search-input-field-split-dates-1"
-                                                class=" pb_hover-height-32 pb_hover-grey-border-right-255 pb_grey-border-left-255 pb_hover-align-self-center pb_hover-absolute pb_hover-top-33 pb_hover-right--1 pb_hover-left--1 pb_hover-margin-top--16 pa_hover-grey-235 pa_background-padding-box pa_radius-32 pa_transparent-border pa_cursor-pointer pa_block pa_pointer-auto pa_absolute pa_top-0 pa_bottom-0 pa_left-0 pa_right-0 pa_z-index-0 pa_hover-grey-235 padding-1 radius-32 transparent-border relative z-index-1"
+                                                class=" pb_hover-height-32 pb_hover-grey-border-right-255 pb_hover-grey-border-left-255 pb_hover-align-self-center pb_hover-absolute pb_hover-top-33 pb_hover-right--1 pb_hover-left--1 pb_hover-margin-top--16 pa_hover-grey-235 pa_background-padding-box pa_radius-32 pa_transparent-border pa_cursor-pointer pa_block pa_pointer-auto pa_absolute pa_top-0 pa_bottom-0 pa_left-0 pa_right-0 pa_z-index-0 pa_hover-grey-235 padding-1 radius-32 transparent-border relative z-index-1"
                                                 role="button" tabindex="0" aria-expanded="false">
                                                 <div class="padding-14-24 text-left relative z-index-1">
                                                     <div
@@ -1627,7 +1628,7 @@
                                     <div
                                         class="flex-container align-items-center flex-basis-zero flex-grow-1 flex-shrink-0 relative margin--1">
                                         <div id="structured-search-input-field-guests-button"
-                                            class="pb_hover-height-32 pb_grey-border-left-255 pb_hover-align-self-center pb_hover-absolute pb_hover-top-33 pb_hover-left-0 pb_hover-margin-top--16 pa_hover-grey-235 pa_background-padding-box pa_radius-32 pa_transparent-border pa_cursor-pointer pa_block pa_pointer-auto pa_absolute pa_top-0 pa_bottom-0 pa_left-0 pa_right-0 pa_z-index-0 pa_margin-left-2 pa_user-select-auto pa_hover-grey-235 padding-1 flex-basis-zero flex-grow-1 flex-shrink-0"
+                                            class="pb_hover-height-32 pb_hover-grey-border-left-255 pb_hover-align-self-center pb_hover-absolute pb_hover-top-33 pb_hover-left-0 pb_hover-margin-top--16 pa_hover-grey-235 pa_background-padding-box pa_radius-32 pa_transparent-border pa_cursor-pointer pa_block pa_pointer-auto pa_absolute pa_top-0 pa_bottom-0 pa_left-0 pa_right-0 pa_z-index-0 pa_margin-left-2 pa_user-select-auto pa_hover-grey-235 padding-1 flex-basis-zero flex-grow-1 flex-shrink-0"
                                             role="button" tabindex="0" aria-expanded="false">
                                             <div class="padding-14-24 relative z-index-1">
                                                 <div
