Design: give datePanel shadow

--- a/clone.html
+++ b/clone.html
@@ -1544,7 +1544,7 @@
                                             </div>
                                         </div>
                                         <!-- 달력 레이어 -->
-                                        <div style="top: 64px; left: 0px; right: 0px; max-height: calc(100vh - 200px);"
+                                        <div style="top: 64px; left: 0px; right: 0px; max-height: calc(100vh - 200px); box-shadow: 0 3px 12px 0 rgb(0 0 0/0.15);"
                                             class="visibility-hidden absolute z-index-1 padding-16-32 margin-top-12 background-color-basic radius-32"
                                             id="structured-search-input-field-dates-panel">
                                             <div style="padding: 18px 28px 10px;"
