Refactor: event delegation

--- a/clone.html
+++ b/clone.html
@@ -1536,9 +1536,9 @@
                                             class="flex-container justify-content-between align-items-center flex-basis-zero flex-grow-1 flex-shrink-0">
                                             <div class="flex-basis-zero flex-grow-1 flex-shrink-0 relative margin--1">
                                                 <div id="structured-search-input-field-split-dates-0"
-                                                    class="z-index-1 pb_hover-height-32 pb_hover-grey-border-right-255 pb_hover-grey-border-left-255 pb_hover-align-self-center pb_hover-absolute pb_hover-top-33 pb_hover-right--1 pb_hover-left--1 pb_hover-margin-top--16 pa_hover-grey-235 pa_background-padding-box pa_radius-32 pa_transparent-border pa_cursor-pointer pa_block pa_pointer-auto pa_absolute pa_top-0 pa_bottom-0 pa_left-0 pa_right-0 pa_z-index-0 pa_hover-grey-235 padding-1 radius-32 transparent-border relative"
+                                                    class="z-index-1 pb_hover-height-32 pb_hover-grey-border-right-255 pb_hover-grey-border-left-255 pb_hover-align-self-center pb_hover-absolute pb_hover-top-33 pb_hover-right--1 pb_hover-left--1 pb_hover-margin-top--16 pa_hover-grey-235 pa_background-padding-box pa_radius-32 pa_transparent-border pa_cursor-pointer pa_block pa_pointer-auto pa_absolute pa_top-0 pa_bottom-0 pa_left-0 pa_right-0 pa_z-index-0 padding-1 radius-32 transparent-border relative"
                                                     role="button" tabindex="0" aria-expanded="false">
-                                                    <div class="z-index-1 cursor-pointer padding-14-24 text-left relative">
+                                                    <div class="z-index-1 cursor-pointer padding-14-24 text-left relative pointer-none">
                                                         <div
                                                             class="text font-black font-12px font-600 padding-bottom-2 line-height-16px">
                                                             체크인
@@ -1619,9 +1619,9 @@
 
                                             <div class="flex-basis-zero flex-grow-1 flex-shrink-0 relative margin--1">
                                                 <div id="structured-search-input-field-split-dates-1"
-                                                    class=" pb_hover-height-32 pb_hover-grey-border-right-255 pb_hover-grey-border-left-255 pb_hover-align-self-center pb_hover-absolute pb_hover-top-33 pb_hover-right--1 pb_hover-left--1 pb_hover-margin-top--16 pa_hover-grey-235 pa_background-padding-box pa_radius-32 pa_transparent-border pa_cursor-pointer pa_block pa_pointer-auto pa_absolute pa_top-0 pa_bottom-0 pa_left-0 pa_right-0 pa_z-index-0 pa_hover-grey-235 padding-1 radius-32 transparent-border relative z-index-1"
+                                                    class=" pb_hover-height-32 pb_hover-grey-border-right-255 pb_hover-grey-border-left-255 pb_hover-align-self-center pb_hover-absolute pb_hover-top-33 pb_hover-right--1 pb_hover-left--1 pb_hover-margin-top--16 pa_hover-grey-235 pa_background-padding-box pa_radius-32 pa_transparent-border pa_cursor-pointer pa_block pa_pointer-auto pa_absolute pa_top-0 pa_bottom-0 pa_left-0 pa_right-0 pa_z-index-0 padding-1 radius-32 transparent-border relative z-index-1"
                                                     role="button" tabindex="0" aria-expanded="false">
-                                                    <div class="padding-14-24 text-left relative z-index-1">
+                                                    <div class="padding-14-24 text-left relative z-index-1 cursor-pointer pointer-none">
                                                         <div
                                                             class="text font-black font-12px font-600 padding-bottom-2 line-height-16px">
                                                             체크아웃
@@ -1639,9 +1639,9 @@
                                         <div
                                             class="flex-container align-items-center flex-basis-zero flex-grow-1 flex-shrink-0 relative margin--1">
                                             <div id="structured-search-input-field-guests-button"
-                                                class="pb_hover-height-32 pb_hover-grey-border-left-255 pb_hover-align-self-center pb_hover-absolute pb_hover-top-33 pb_hover-left-0 pb_hover-margin-top--16 pa_hover-grey-235 pa_background-padding-box pa_radius-32 pa_transparent-border pa_cursor-pointer pa_block pa_pointer-auto pa_absolute pa_top-0 pa_bottom-0 pa_left-0 pa_right-0 pa_z-index-0 pa_margin-left-2 pa_user-select-auto pa_hover-grey-235 padding-1 flex-basis-zero flex-grow-1 flex-shrink-0"
+                                                class="pb_hover-height-32 pb_hover-grey-border-left-255 pb_hover-align-self-center pb_hover-absolute pb_hover-top-33 pb_hover-left-0 pb_hover-margin-top--16 pa_hover-grey-235 pa_background-padding-box pa_radius-32 pa_transparent-border pa_cursor-pointer pa_block pa_pointer-auto pa_absolute pa_top-0 pa_bottom-0 pa_left-0 pa_right-0 pa_z-index-0 pa_margin-left-2 pa_user-select-auto padding-1 flex-basis-zero flex-grow-1 flex-shrink-0"
                                                 role="button" tabindex="0" aria-expanded="false">
-                                                <div class="padding-14-24 relative z-index-1">
+                                                <div class="padding-14-24 relative z-index-1 cursor-pointer pointer-none">
                                                     <div
                                                         class="font-black font-12px font-600 padding-bottom-2 line-height-16px">
                                                         여행자
