--- a/clone.html
+++ b/clone.html
@@ -109,6 +109,7 @@
                                             <div style="margin: -1px;"
                                                 class="relative flex-container align-items-center flex-basis-zero flex-grow-1 flex-shrink-0">
                                                 <label
+                                                    id="structured-search-input-field-place-label"
                                                     class="pb_hover-height-32 pb_hover-grey-border-right-255 pb_hover-align-self-center pb_hover-absolute pb_hover-top-33 pb_hover-right-0 pb_hover-margin-top--16 pa_background-padding-box pa_radius-32 pa_transparent-border pa_cursor-pointer pa_block pa_pointer-auto pa_absolute pa_top-0 pa_bottom-0 pa_left-0 pa_right-0 pa_z-index-0 pa_margin-right-2 pa_hover-grey-235 block flex-basis-zero flex-grow-1 flex-shrink-0 radius-32 transparent-border cursor-pointer padding-14-32"
                                                     for="bigsearch-query-location-input">
                                                     <div class="z-index-1 relative">
